<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.multipay.android.MenuActivity" >

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_overflow">
        <menu>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_action_about"
                android:showAsAction="ifRoom"
                android:title="@string/action_about"/>
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_action_help"
                android:showAsAction="ifRoom"
                android:title="@string/action_help"/>
        </menu>
    </item>
</menu>