<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_card_form_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_blue"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:id="@+id/add_card_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

         <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/social_logo_imageview"
        android:src="@drawable/background" />
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_card_form_card_number_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/purple01"
                    android:gravity="center_vertical"
                    android:text="@string/add_card_form_number_input_label" />
<!--                     android:drawableRight="@drawable/ico_tc_visa"-->
            </LinearLayout>

            <EditText
                android:id="@+id/add_card_form_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/dark_gray"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_credit_card"
                android:nextFocusDown="@+id/add_card_form_month"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/purple01"
                android:text="@string/add_card_form_expire_date_input_label"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="vertical" >
                    <Spinner
                        android:id="@+id/add_card_form_month"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:nextFocusDown="@+id/add_card_form_year"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <Spinner
                        android:id="@+id/add_card_form_year"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>
            <!--                android:background="@drawable/spinner_background_holo"-->
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/purple01"
                android:text="@string/add_card_form_last_and_first_name_input"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_card_form_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".4"
                    android:baselineAligned="false"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/add_card_form_doc_type_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/purple01"
                        android:text="@string/add_card_form_document_type_input"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/add_card_form_document_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusDown="@+id/add_card_form_document_number"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/add_card_form_document_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/purple01"
                        android:text="@string/add_card_form_document_number_input"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/add_card_form_document_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_card_form_security_code_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/purple01"
                        android:text="@string/add_card_form_security_code_input"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/add_card_form_security_code"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/installments_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:baselineAligned="false" >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/add_card_form_continue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/purple_logo"
            android:gravity="center"
            android:onClick="submitForm"
            android:text="@string/add_card_form_save_button"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>